# OQR2

./: CLAUDE.md  QUICKSTART.md  SIFE_IMPLEMENTATION_STEPS.md  SIFE_REQUEST_UNDERSTANDING.md  SIFE_WORK_CONTEXT.md  TASKS_PROGRESS.md  create_admin.bat  docker-compose.yml  olimpqr_backup_final.dump  sife_plan.md  start.sh
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 009_special_olympiad_support.py  010_badge_photos_in_db.py  011_badge_template.py  012_user_competition_access.py  013_tour_times.py  014_participant_passport_military.py  015_staff_badges.py  016_float_score_total.py  2126be9ffb45_make_scan_attempt_id_nullable.py
backend/src/olimpqr/: config.py  main.py
backend/src/olimpqr/application/dto/: auth_dto.py  competition_dto.py
backend/src/olimpqr/domain/entities/: attempt.py  competition.py  participant.py
backend/src/olimpqr/domain/value_objects/: score.py
backend/src/olimpqr/infrastructure/docx/: __init__.py  template_generator.py
backend/src/olimpqr/infrastructure/pdf/: badge_generator.py  badge_template_pdf_generator.py  json_badge_generator.py  sheet_generator.py  sheet_template.json
backend/src/olimpqr/infrastructure/repositories/: __init__.py  attempt_repository_impl.py  competition_repository_impl.py  participant_repository_impl.py  scan_repository_impl.py  user_competition_access_repository_impl.py
backend/src/olimpqr/shared/: __init__.py  roman.py
backend/templates/word/: badge_template.docx  special_answer_blank_template.docx  special_cover_a3_template.docx
backend/tests/unit/: test_invigilator_token_parsing.py  test_seating_algorithm.py  test_team_seating_projection.py
(+72 files in other folders)
