[tool.poetry]
name = "olimpqr"
version = "0.1.0"
description = "Olympic Competition Management System with Anonymous QR Codes"
authors = ["StolovAR <andrey_stolov@mail.ru>"]
packages = [{include = "olimpqr", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"

# Web Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-multipart = "^0.0.12"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.30.0"
alembic = "^1.13.0"

# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.0"
pyjwt = "^2.9.0"
cryptography = "^44.0.0"

# Storage
minio = "^7.2.0"

# Task Queue
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.0"

# OCR & Image Processing
paddlepaddle = "^3.0.0"
paddleocr = "^2.8.1"
opencv-python = "^4.10.0"
pillow = "^11.0.0"
pyzbar = "^0.1.9"

# PDF Generation & Processing
reportlab = "^4.2.0"
qrcode = {extras = ["pil"], version = "^8.0"}
PyMuPDF = "^1.24.0"

# Utilities
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0"
openpyxl = "^3.1.5"
python-docx = "^1.1.2"

# Sync DB driver for Celery worker
psycopg2-binary = "^2.9.9"

# Rate Limiting
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
aiosqlite = "^0.20.0"

# Linting & Formatting
ruff = "^0.7.0"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
